Included the logic for reading and writing to file. In our case the logic is built to write the file with out data to the User root directory of the OS .

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Mihail OLARU",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^8.15.0",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2"
   },
