--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "chalk": "^5.0.1",
-    "dedent-js": "^1.0.1"
+    "dedent-js": "^1.0.1",
+    "dotenv": "^16.0.1"
   }
 }
